test/integration/good/warning/decl.stan
data {
   int array[5]; // this is terrible
   array[5] int array2;
}
