test/integration/bad/lang/bad_decl2.stan
data {
  array[3,3] x;
}
